fixed issue with landing mage causing overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@ font-family: 'Luckiest Guy', cursive;*/
 
 #more {display: none;}
 
+
 :root {
     --bg-color: #D73135;
     --text-color: #ffffff;
@@ -22,7 +23,6 @@ font-family: 'Luckiest Guy', cursive;*/
   }
 
   *{
-
     min-width: 0;
     text-decoration: none;
     color: var(--text-color);
@@ -31,15 +31,14 @@ font-family: 'Luckiest Guy', cursive;*/
   }
 
 body{
-    font-size: 1.5vw;
     display: flex;
     justify-content: center;
     scroll-behavior: smooth;
     width: 100%;
     background: linear-gradient(140deg, rgba(215,49,53,1) 0%, rgba(255,224,22,1) 100%);
     background-repeat: no-repeat;
-    background-size: cover;
-    background-attachment: fixed;
+    background-size: contain;
+    background-attachment: 0;
     /*had backdrop-filter: saturate(2.5); in body tag causing 
     header to not stay in fixed position*/
 }
@@ -58,6 +57,7 @@ body{
     background-repeat: no-repeat;
     background-position: top left, top right, bottom left, bottom right;
     background-size: 25%;
+    padding-bottom: 1em;
 }
 
 .banner-contents{
@@ -67,7 +67,7 @@ body{
 }
 
 .banner-img img{
-    height: 30em;
+    height: 25em;
 }
 
 .banner-text img{
@@ -102,8 +102,12 @@ header {
     background-color: var(--bg-color);
 }
 
+header div{
+    width: 33%;
+}
+
 .logo img{
-    max-width: 7.5em;
+    max-width: 5em;
     padding: .5em;
 }
 
@@ -123,9 +127,9 @@ header ul.navbar{
 .contact{
     display: flex;
     flex-wrap: nowrap;
+    justify-content: flex-end;
 }
 .contact a{
-    font-size: 1.5em;
     padding: 0 1em;
 }
 
@@ -140,7 +144,6 @@ main{
     clip-path: inset(0px -15px 0px -15px);
     background-image: url(/images/hotdogbanner2.png);
     background-repeat: repeat-y;
-    height: 9000px;
 }
 
 .about{
@@ -149,26 +152,27 @@ main{
     flex-direction: column;
 }
 
-#updawg{
-    max-width: 200px;
-    padding-left:1em;
+.updawg{
+    width: 225px;
+    padding-left: .5em;
+    flex-shrink: 0;
   }
 
   .landing-img{
     max-height: 500px;
+    display: none;
   }
 
 .landing-img img{
     width: 100%;
     height: 50%;
-    display: block;
     
 }
 
 h1{
     font-family: 'Luckiest Guy', cursive;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
 }
@@ -187,21 +191,27 @@ p{
 
 footer{
     font-family: 'Happy Monkey', cursive;
+    text-transform: uppercase;
+    font-size: .7em;
+    font-weight: bolder;
     width: 100%;
+    max-width: 900px;
     max-height: 140px;
-    justify-content: space-between;
-    align-items: center;
+    box-shadow: 0 0 5px 5px rgba(0,0,0,0.3);
+    clip-path: inset(-15px 0px -15px 0px);
+    background-color: var(--bg-color);
+    overflow-y: hidden;
 }
 
 .footer-main{
     display: flex;
     align-items: center;
     font-size: 1.2em;
-    padding: 0 1em;
 }
 
 .location{
     width: 33.33%;
+    padding: 0 1em;
 }
 
 .hours{
